--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@
 /* Custom Properties, update these for your own design */
 
 :root {
-    --ff-primary: 'Source Sans Pro', sans-serif;
-    --ff-secondary: 'Source Code Pro', monospace;
+    
+    --ff-primary:'Cairo', sans-serif;
+    --ff-secondary:'Cairo', sans-serif;
     
     --fw-reg: 300;
-    --fw-bold: 900;
+    --fw-bold: 800;
     
     --clr-light: #fff;
     --clr-dark: #303030;
@@ -24,7 +25,7 @@
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
-    --fs-body: 1rem;
+    --fs-body: 1.2rem;
 
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
     0.125em 0.125em 0.25em rgba(0.0.0..15);
@@ -35,7 +36,7 @@
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
         --fs-h3: 1.5rem;
-        --fs-body: 1.125rem;
+        --fs-body: 1.3rem;
     }
 }
 
@@ -57,7 +58,7 @@ body{
 }
 
 section{
-    padding: 7em 2em;
+    padding: 5em 2em;
 }
 
 /* #services {
@@ -111,23 +112,69 @@ h2 { font-size: var(--fs-h2); }
 h3 { font-size: var(--fs-h3); }
 
 p {
-    line-height: 1.5;
-    gap: 1rem;
+    line-height: 1.4;
+    gap: 0.5rem;
+    font-size: var(--fs-body);
+    font-weight: var(--fw-reg);
 }
 
 /* header */
 
-header {
-    display: flex;
-    justify-content: space-between;
+/* header {
+    background-color: var(--clr-dark);
+    max-width: 100%;
+} */
+
+.logo-container {
+    /* max-width: 100px;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-h1);
+    font-weight: var(--fw-bold); */
 }
 
 .logo {
-    max-width: 100px;
     font-family: var(--ff-primary);
-    font-size: 2rem;
+    font-size: var(--fs-h3);
     font-weight: var(--fw-reg);
+    margin: 0;
+    padding-top: 0.3rem;
+    padding-left: 1.2rem;
 }
+
+.logo-a {
+    font-family: var(--ff-primary);
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-reg);
+    margin: 0;
+    padding-top: 0.3rem;
+    padding-left: 1.2rem;
+    text-align: left;
+}
+
+
+/* .logo-a {
+    list-style: none;
+    text-decoration: none;
+} */
+
+.arabic .logo-a {
+    text-decoration: none;
+    list-style: none;
+}
+
+/* .container {
+max-width: 85%;
+height: 90%;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+margin: 0;
+background-color:#070a0a ;
+} */
+
+/* @media(min-width: 600px) {
+    .container {max-width: 95%;}
+} */
 
 .nav {
     position: fixed;
@@ -161,6 +208,7 @@ header {
     text-decoration: none;
 }
 
+
 .nav__link:hover {
     color: var(--clr-accent);
 }
@@ -172,7 +220,7 @@ header {
     cursor: pointer;
     position: absolute;
     right: 1em;
-    top: 1em;
+    top: 2em;
     z-index: 1000;
 }
 
@@ -258,7 +306,8 @@ strong {
 }
 
 .section__subtitle--intro,
-.section__subtitle--about {
+.section__subtitle--about,
+.section__subtitle--intro-a {
     background-color: var(--clr-accent);
     font-family: var(--ff-secondary);
     padding: 0.90em 1em;
@@ -278,6 +327,11 @@ strong {
 .section__subtitle--intro{
     display: inline-block;
 }
+.section__subtitle--intro-a{
+    display: inline-block;
+}
+
+
 
 @media (min-width: 600px) {
     .intro {
@@ -306,6 +360,17 @@ strong {
         position: relative;
         left: -1.5em;
         width: calc(100% + 1.5em);
+    }
+
+    .section__subtitle--intro-a {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        right: -1.5em;
+        width: calc(100% + 1.5em);
+        text-align: left;
     }
 }
 
@@ -354,9 +419,10 @@ strong {
 {
     .services {
         display: flex;
-        max-width: 1000px;
+        max-width: 1500px;
         margin-left: auto;
         margin-right: auto;
+        justify-content: center;
     }
     
     .service + .services {
@@ -378,8 +444,8 @@ strong {
 /* about me */
 
 .about-me {
-    max-width: 1000%;
-    margin: 0rem;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .about-me__img {
@@ -403,7 +469,7 @@ strong {
 
     }
 
-    .section__subtitle--about {
+    .section__subtitle--about-e {
         grid-column: 1/-1;
         grid-row:2;
         position: relative;
@@ -411,6 +477,15 @@ strong {
         width: calc(100% + 1em);
         padding-left: 1em;
         padding-right: calc(200px + 4em);
+    }
+
+    .section__subtitle--about-a {
+        grid-column: 1/-1;
+        grid-row:2;
+        position: relative;
+        left: 0.01em;
+        width: calc(100% + 1em);
+        padding-left: 1em;
     }
 
     .about-me__img {
@@ -433,7 +508,9 @@ strong {
 .section__subtitle-work {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
-    margin-bottom: 2em;
+    font-size: var(--fs-h3);
+    margin-bottom: 1.5em;
+    margin-top: 2.5rem;
 }
 
 .portfolio {
@@ -506,4 +583,18 @@ strong {
 
 .social-list__link {
     padding: .5em;
+}
+
+/* Individual portfolio item styles */
+
+.portfolio-item-individual {
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.portfolio-item-individual p {
+    max-width: 600px;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
